src/components/common/Common.module.css
@import url('./global.css');

.marR5 {
    margin-right: 5px;
}

.padT5 {
    padding-top: 5px;
}

.lineHeight33 {
    line-height: 33px;
}

.txtEllipsis {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.text-tooltip {
    position: absolute;
    visibility: hidden;
    opacity: 0;
    transition: opacity 1s ease;
    bottom: 150%;
    padding: 10px;
    border-radius: 2px;
    background: rgb(2, 2, 111);
    color: rgb(255, 255, 255);
    box-shadow: 0px 0px 12px rgba(2, 2, 111, 0.4);
}

.text:hover+.text-tooltip {
    visibility: visible;
    opacity: 1;
    transition: opacity 0.5s ease-in-out;
}

.content :global .ant-tree-show-line .ant-tree-switcher-line-icon svg {
    width: 1.25em;
    height: 1.25em;
}

.contentHeaderBackground {
    background-color: #f4f4f4;
    padding: 10px;
    margin-bottom: 20px;
    border-radius: 7px;
}

.contentHeaderBackground .headerSelectField :global .ant-input-affix-wrapper,
.contentHeaderBackground .headerSelectField :global .ant-btn-default,
.contentHeaderBackground :global .ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
    border-inline-end-width: 0px;
    border-color: transparent;
}

.contentHeaderBackground .headerSelectField :global .ant-btn-default:not(:disabled):active,
.contentHeaderBackground :global .ant-btn-default:not(:disabled):hover,
.contentHeaderBackground :global .ant-input-search .ant-input:focus {
    border-color: transparent;
}

.contentHeaderBackground :global .anticon-close-circle {
    color: #0b0b0c;
    width: 12px;
    height: 12px;
    vertical-align: revert;
}

.contentHeaderBackground .headerSelectField :global .ant-btn-default,
.contentHeaderBackground .headerSelectField :global .ant-input-search .ant-input:focus,
.contentHeaderBackground .headerSelectField :global .ant-input-affix-wrapper-focused {
    border-color: transparent;
}

.contentHeaderBackground :global .ant-input-group {
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border: 1px solid #d9d9d9;
}

.contentHeaderBackground .headerSelectField :global .ant-input-affix-wrapper .ant-input-clear-icon {
    color: #0b0b0c;
}

.contentHeaderBackground :global .ant-input-group:hover {
    border: 1px solid #0b0b0c;
}

.contentHeaderBackground :global .ant-input-group .ant-input:focus,
.contentHeaderBackground :global .ant-input-group .ant-input:hover {
    border-inline-end-width: 0;
}

.contentHeaderBackground :global .ant-input-affix-wrapper:focus,
.contentHeaderBackground :global .ant-input-affix-wrapper-focused {
    box-shadow: 0 0 0 2px rgba(255, 5, 5, 0);
}

.contentHeaderBackground .headingToggle {
    border: #e6e6e6 1px solid;
    border-radius: 6px;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    padding: 7px 5px;
    display: inline-block;
}

.autoCompleteContent :global .ant-input-search .ant-input:hover,
.autoCompleteContent :global .ant-input-search .ant-input:focus {
    border-color: transparent;
}

.autoCompleteContent :global .ant-btn-default {
    border-color: transparent;
    background-color: #fff;
}

.contentHeaderBackground :global .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
    height: 36px;
}

.autoCompleteContent :global .ant-btn-default:not(:disabled):hover {
    border-color: transparent;
}

.tableProduct {
    margin-bottom: 20px;
    padding: 0;
}

/* .tableProduct :global .ant-table-thead tr th {
    text-align: center;
} */

.tableProduct :global .ant-pagination .ant-pagination-item {
    height: 34px !important;
    line-height: 32px !important;
    background-color: #ffffff;
    border: 1px solid #b5b5b6;
    /* border-radius: 2px; */
}

.tableProduct :global .ant-pagination .ant-pagination-item-active {
    border: 1px solid #ff3e5b !important;
    font-weight: 500;
}

.tableProduct :global .ant-pagination .ant-pagination-prev .ant-pagination-item-link,
.tableProduct :global .ant-pagination .ant-pagination-next .ant-pagination-item-link {
    height: 34px !important;
    line-height: 32px !important;
    border: 1px solid #b5b5b6;
    color: #b5b5b6;
}

.lastheaderbutton {
    margin-right: 0px;
}

.activeText {
    color: #00a310;
}

.inactiveText {
    color: #8e8585;
}

.container {
    padding: 20px;
}

.mb10 {
    margin-bottom: 20px;
}

.inputBox {
    border-radius: 4px;
    height: 36px;
}

.treemenu {
    margin: 24px 0px;
    /* padding-left: 25px; */
    padding-left: 0px;
    padding-bottom: 0px;
    line-height: 2em;
    list-style: none;
    background-color: transparent;
    color: #0b0b0c;
}

.floatRight {
    float: right;
}

.textRight {
    text-align: right;
}

.textCenter {
    text-align: center;
}

.exitButton {
    border: 1px solid #ff3e5b;
    border-radius: 3px;
    position: relative;
    padding: 18px 36px;
    margin: 4px 1px;
    font-size: 14px;
    color: #ff3e5b;
    line-height: 2px;
    background-color: #fff;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 0;
    will-change: box-shadow, transform;
    transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
    float: right;
}

.exitButton:hover,
.exitButton:focus,
.exitButton:active,
.exitButton:active:focus,
.exitButton.active:hover {
    background-color: #ff3e5b;
    color: #ffffff !important;
}

.treeViewContainer {
    clear: both;
    margin-bottom: 10px;
}

.treeCollapsibleButton {
    border: 1px solid #ff3e5b;
    border-radius: 3px;
    position: absolute;
    z-index: 10;
    top: 136px;
    /* left:266px; */
    padding: 5px;
    color: #ff3e5b;
    line-height: 2px;
    background-color: #ffffff;
    font-weight: 400;
    cursor: pointer;
    width: 30px;
    margin: 10px auto 10px 15px;
    float: left;
    will-change: box-shadow, transform;
    transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
}
/* ... */

